--- a/index.html
+++ b/index.html
@@ -285,81 +285,84 @@
   <button id="hacer-pedido" onclick="hacerPedido()">Hacer Pedido</button>
 </section>
 
-<section id="mi-cuenta" style="padding: 40px 20px; background-color: #f4f4f4;">
-  <h2 style="text-align: center; font-size: 2.5em; color: #2c3e50;">Mi Cuenta</h2>
+<section id="mi-cuenta" style="padding: 40px 20px; background-color: #f4f4f4; text-align: center;">
+  <h2 style="font-size: 2.5em; color: #2c3e50;">Mi Cuenta</h2>
 
-  <!-- Información Personal -->
-  <details style="margin: 20px 0; background: white; padding: 20px; border-radius: 10px;">
-    <summary style="font-size: 1.2em; cursor: pointer;"><strong>👤 Información Personal</strong></summary>
-    <form style="margin-top: 15px;">
-      <label>Nombre completo:</label><br>
-      <input type="text" name="nombre" placeholder="Juan Pérez"><br><br>
+  <!-- Contenedor central -->
+  <div style="max-width: 600px; margin: auto; text-align: left;">
 
-      <label>Correo electrónico:</label><br>
-      <input type="email" name="correo" placeholder="juan@example.com"><br><br>
+    <!-- Información Personal -->
+    <details style="margin: 20px 0; background: white; padding: 20px; border-radius: 10px;">
+      <summary style="font-size: 1.2em; cursor: pointer;"><strong>👤 Información Personal</strong></summary>
+      <form style="margin-top: 15px; display: flex; flex-direction: column; gap: 10px;">
+        <label>Nombre completo:</label>
+        <input type="text" name="nombre" placeholder="Juan Pérez">
 
-      <label>Teléfono:</label><br>
-      <input type="tel" name="telefono" placeholder="555-123-4567"><br><br>
+        <label>Correo electrónico:</label>
+        <input type="email" name="correo" placeholder="juan@example.com">
 
-      <button type="submit">Guardar Cambios</button>
-    </form>
-  </details>
+        <label>Teléfono:</label>
+        <input type="tel" name="telefono" placeholder="555-123-4567">
 
-  <!-- Dirección -->
-  <details style="margin: 20px 0; background: white; padding: 20px; border-radius: 10px;">
-    <summary style="font-size: 1.2em; cursor: pointer;"><strong>🏠 Dirección de Envío</strong></summary>
-    <form style="margin-top: 15px;">
-      <label>Calle y número:</label><br>
-      <input type="text" name="calle" placeholder="Av. Reforma 123"><br><br>
+        <button type="submit">Guardar Cambios</button>
+      </form>
+    </details>
 
-      <label>Colonia:</label><br>
-      <input type="text" name="colonia" placeholder="Centro"><br><br>
+    <!-- Dirección -->
+    <details style="margin: 20px 0; background: white; padding: 20px; border-radius: 10px;">
+      <summary style="font-size: 1.2em; cursor: pointer;"><strong>🏠 Dirección de Envío</strong></summary>
+      <form style="margin-top: 15px; display: flex; flex-direction: column; gap: 10px;">
+        <label>Calle y número:</label>
+        <input type="text" name="calle" placeholder="Av. Reforma 123">
 
-      <label>Ciudad:</label><br>
-      <input type="text" name="ciudad" placeholder="Ciudad de México"><br><br>
+        <label>Colonia:</label>
+        <input type="text" name="colonia" placeholder="Centro">
 
-      <label>Código Postal:</label><br>
-      <input type="text" name="cp" placeholder="06000"><br><br>
+        <label>Ciudad:</label>
+        <input type="text" name="ciudad" placeholder="Ciudad de México">
 
-      <button type="submit">Guardar Dirección</button>
-    </form>
-  </details>
+        <label>Código Postal:</label>
+        <input type="text" name="cp" placeholder="06000">
 
-  <!-- Pedidos -->
-  <details style="margin: 20px 0; background: white; padding: 20px; border-radius: 10px;">
-    <summary style="font-size: 1.2em; cursor: pointer;"><strong>📦 Mis Pedidos</strong></summary>
-    <ul style="margin-top: 15px; list-style: none; padding-left: 0;">
-      <li><strong>Pedido #00123</strong> - 12/04/2025 - Enviado</li>
-      <li><strong>Pedido #00110</strong> - 03/04/2025 - Entregado</li>
-      <li><strong>Pedido #00098</strong> - 25/03/2025 - Cancelado</li>
-    </ul>
-  </details>
+        <button type="submit">Guardar Dirección</button>
+      </form>
+    </details>
 
-  <!-- Contraseña -->
-  <details style="margin: 20px 0; background: white; padding: 20px; border-radius: 10px;">
-    <summary style="font-size: 1.2em; cursor: pointer;"><strong>🔒 Cambiar Contraseña</strong></summary>
-    <form style="margin-top: 15px;">
-      <label>Contraseña actual:</label><br>
-      <input type="password" name="actual"><br><br>
+    <!-- Pedidos -->
+    <details style="margin: 20px 0; background: white; padding: 20px; border-radius: 10px;">
+      <summary style="font-size: 1.2em; cursor: pointer;"><strong>📦 Mis Pedidos</strong></summary>
+      <ul style="margin-top: 15px; list-style: none; padding-left: 0;">
+        <li><strong>Pedido #00123</strong> - 12/04/2025 - Enviado</li>
+        <li><strong>Pedido #00110</strong> - 03/04/2025 - Entregado</li>
+        <li><strong>Pedido #00098</strong> - 25/03/2025 - Cancelado</li>
+      </ul>
+    </details>
 
-      <label>Nueva contraseña:</label><br>
-      <input type="password" name="nueva"><br><br>
+    <!-- Contraseña -->
+    <details style="margin: 20px 0; background: white; padding: 20px; border-radius: 10px;">
+      <summary style="font-size: 1.2em; cursor: pointer;"><strong>🔒 Cambiar Contraseña</strong></summary>
+      <form style="margin-top: 15px; display: flex; flex-direction: column; gap: 10px;">
+        <label>Contraseña actual:</label>
+        <input type="password" name="actual">
 
-      <label>Confirmar nueva contraseña:</label><br>
-      <input type="password" name="confirmar"><br><br>
+        <label>Nueva contraseña:</label>
+        <input type="password" name="nueva">
 
-      <button type="submit">Actualizar Contraseña</button>
-    </form>
-  </details>
+        <label>Confirmar nueva contraseña:</label>
+        <input type="password" name="confirmar">
 
-  <!-- Cerrar sesión -->
-  <div style="text-align: center; margin-top: 30px;">
-    <button onclick="cerrarSesion()" style="padding: 10px 20px; background-color: #e74c3c; color: white; border: none; font-size: 1em; border-radius: 5px;">
-      🚪 Cerrar Sesión
-    </button>
+        <button type="submit">Actualizar Contraseña</button>
+      </form>
+    </details>
+
+    <!-- Cerrar sesión -->
+    <div style="text-align: center; margin-top: 30px;">
+      <button onclick="cerrarSesion()" style="padding: 10px 20px; background-color: #e74c3c; color: white; border: none; font-size: 1em; border-radius: 5px;">
+        🚪 Cerrar Sesión
+      </button>
+    </div>
   </div>
 </section>
-
 <footer>
   <p>&copy; 2025 refacciones vazquez</p>
 </footer>
