--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
     }
     .header-flex {
       display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
+      flex-direction: column;
+      align-items: center; /* Opcional: centra los elementos */
+      text-align: center;
     }
     .header-flex img {
       width: 350px;
@@ -125,10 +125,10 @@
 
 <header>
   <div class="header-flex">
-    <img src="https://thumbs.dreamstime.com/b/logotipo-de-motocicleta-dise%C3%B1o-vectores-para-motocicletas-taller-reparaci%C3%B3n-marca-producto-logo-motosport-veh%C3%ADculo-vector-263926379.jpg">
-    <h1>Refaccionaria "Vazquez"</h1>
-    <h2>Todo lo que necesitas para tu motocicleta lo encontraras aqui</h2> 
-  </div>
+  <img src="https://thumbs.dreamstime.com/b/logotipo-de-motocicleta-dise%C3%B1o-vectores-para-motocicletas-taller-reparaci%C3%B3n-marca-producto-logo-motosport-veh%C3%ADculo-vector-263926379.jpg" alt="Logo de la Refaccionaria">
+  <h1>Refaccionaria "Vazquez"</h1>
+  <h2>Todo lo que necesitas para tu motocicleta lo encontrarás aquí</h2>
+</div>
 </header>
 
 <nav>
