--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
   <a onclick="mostrarSeccion('mi-cuenta')">Mi Cuenta</a>
 </nav>
 
-<section id="inicio" class="active" style="text-align: center; padding: 20px 20px;">
+<section id="inicio" class="active"; padding: 20px 20px;">
   <div class="inicio-contenido" style="max-width: 900px; margin: 0 auto;">
-    <h1 style="font-size: 2.5em;text-align: center; color: #2c3e50;">Bienvenido a Refaccionaria "Vazquez"</h1>
-    <p style="font-size: 1.2em;text-align: center;margin-top: 10px; color: #555;">Tu aliado confiable en refacciones para todo tipo de motocicletas.</p>
+    <h1 style="font-size: 2.5em; color: #2c3e50;">Bienvenido a Refaccionaria "Vazquez"</h1>
+    <p style="font-size: 1.2em; color: #555;">Tu aliado confiable en refacciones para todo tipo de motocicletas.</p>
 
     <p style="margin-top: 10px">
       En Refaccionaria "Vazquez", nos dedicamos a ofrecer productos de la más alta calidad para mantener tu motocicleta en óptimas condiciones. Ya seas un aficionado o un profesional del motociclismo, encontrarás todo lo que necesitas con nosotros.
